# novel2audiobook

./: .gitignore  pyproject.toml
.codegraph/: daemon.pid
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/novelplayer/data/: ApiClient.kt  ApiModels.kt  NovelRepository.kt
android/app/src/main/java/com/novelplayer/player/: AudioPlayer.kt
android/app/src/main/java/com/novelplayer/ui/: MainActivity.kt  NovelDetailScreen.kt  NovelListScreen.kt  NovelNavHost.kt  PlayerScreen.kt
android/app/src/main/res/values/: themes.xml
docs/superpowers/plans/: 2026-06-06-novel-to-audiobook-plan.md
docs/superpowers/specs/: 2026-06-06-novel-to-audiobook-design.md
scripts/: prepare_voice_library.py
src/: config.py  database.py  main.py  models.py
src/api/: audio.py  chapters.py  novels.py  ws.py
src/audio/: compressor.py
src/llm/: character_analyzer.py  client.py  sentence_analyzer.py
src/novel2audiobook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parser/: base.py  epub_parser.py  mobi_parser.py  txt_parser.py
src/pipeline/: orchestrator.py
src/static/: app.js  index.html  style.css
src/tts/: engine.py
src/voice/: library.py  matcher.py
tests/: test_api.py  test_character_analyzer.py  test_compressor.py  test_llm_client.py  test_parser.py  test_sentence_analyzer.py
voice_library/: metadata.json
